--- a/website01/index.html
+++ b/website01/index.html
@@ -2,15 +2,20 @@
 
 <html>
 
-   <head>
-     <title>Seul Lee</title>
-   </head>
-   
-   <body>
-     <img src="https://avatars0.githubusercontent.com/u/30006933?v=4&s=40">
-     <p>Hi! I'm Seul, a designer. Say hello!</p>
-     <input type="email" placeholder="Your email">
-      <input type="submit">
-   </body>
-   
+<head>
+  <title>Seul Lee</title>
+</head>
+
+<body>
+  <h2>Welcome!</h2>
+  <img src="https://avatars0.githubusercontent.com/u/30006933?v=4&s=40">
+  <p>Hi! I'm Seul, a designer based in Canada. Say hello!</p>
+  <input type="email" placeholder="Your email">
+  <input type="submit">
+  <br>
+  <hr>
+  <h3>Show the List of Subscribers</h3>
+
+</body>
+
 </html>
