--- a/website01/index.html
+++ b/website01/index.html
@@ -10,12 +10,19 @@
   <h2>Welcome!</h2>
   <img src="https://avatars0.githubusercontent.com/u/30006933?v=4&s=40">
   <p>Hi! I'm Seul, a designer based in Canada. Say hello!</p>
-  <input type="email" placeholder="Your email">
-  <input type="submit">
+  <br>
+  <form>
+    Message:
+    <input type="text" placeholder="Write anything!" id="user_input" />
+  </form>
+  <button type="submit">Submit</button>
   <br>
   <hr>
-  <h3>Show the List of Subscribers</h3>
-
+  <div id="container">
+    <h3>Show the List of Messages</h3>
+    <ul id="list"> </ul>
+  </div>
+  <script src="/Users/apple/Desktop/Projects/Website-practice/website01/input.js"></script>
 </body>
 
 </html>
