add inline css for now

--- a/website01/index.html
+++ b/website01/index.html
@@ -12,15 +12,21 @@
   <p>Hi! I'm Seul, a designer based in Canada. Say hello!</p>
   <br>
   <form>
-    Message:
-    <input type="text" placeholder="Write anything!" id="user_input" />
+    <div style="width:250px">
+      <p>Message:
+        <input type="text" id="user_input" /></p>
+    </div>
   </form>
-  <button type="submit">Submit</button>
+  <div style="width:130px;margin-left:200px;margin-top: -35px">
+    <!--Will fix this css later-->
+    <button type="submit">Submit</button>
+  </div>
   <br>
   <hr>
   <div id="container">
     <h3>Show the List of Messages</h3>
     <ul id="list"> </ul>
+    <!--Find a way to keep these list-->
   </div>
   <script src="/Users/apple/Desktop/Projects/Website-practice/website01/input.js"></script>
 </body>
