delete inline css, and update css file

--- a/website01/index.html
+++ b/website01/index.html
@@ -4,21 +4,21 @@
 
 <head>
   <title>Seul Lee</title>
+  <link rel="stylesheet" type="text/css" href="/Users/apple/Desktop/Projects/Website-practice/website01/css/style.css">
 </head>
 
 <body>
-  <h2>Welcome!</h2>
-  <img src="https://avatars0.githubusercontent.com/u/30006933?v=4&s=40">
-  <p>Hi! I'm Seul, a designer based in Canada. Say hello!</p>
+  <div class="contents">
+    <img src="https://avatars0.githubusercontent.com/u/30006933?v=4&s=40">
+    <h2>Welcome!</h2>
+    <p>Hi! I'm Seul, a designer based in Canada. Say hello!</p>
+  </div>
   <br>
-  <form>
-    <div style="width:250px">
+  <div id="form_btn">
+    <form>
       <p>Message:
         <input type="text" id="user_input" /></p>
-    </div>
-  </form>
-  <div style="width:130px;margin-left:200px;margin-top: -35px">
-    <!--Will fix this css later-->
+    </form>
     <button type="submit">Submit</button>
   </div>
   <br>
